# vox2ai

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: vox2ai-server-x86_64-unknown-linux-gnu
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: activation_backend.rs  control_protocol.rs  control_server.rs  detection.rs  gnome_bridge.rs  lib.rs  main.rs
desktop/src/api/: protocol.ts  websocket.ts  windowManager.ts
desktop/src/components/: ActivationSettings.tsx  AssistantWindow.tsx  CancelButton.tsx  CommandApproval.tsx  CommandResultView.tsx  ConnectionStatus.tsx  CopyButton.tsx  DiagnosticsWindow.tsx  OnboardingWindow.tsx  PromptInput.tsx  RecordingSettings.tsx  SettingsWindow.tsx  ShortcutRecorder.tsx  StatusPill.tsx  StreamingAnswer.tsx  TranscriptView.tsx  Waveform.tsx
desktop/src/hooks/: useAutoResizeWindow.ts  useBackendConnectionState.ts  useLargeOverlayWindow.ts  useRecordingShortcut.ts  useWindowResizePersistence.ts
desktop/src/utils/: context.ts  shortcut.ts
examples/: config.example.yaml
gnome-extension/: extension.js  metadata.json  prefs.js  stylesheet.css
gnome-extension/lib/: backendService.js  connection.js  controller.js  notifications.js  screenCapture.js  soundFeedback.js  state.js
gnome-extension/lib/markdown/: extractCommands.js  parseMarkdown.js
gnome-extension/lib/ui/: assistantWidget.js  featureFlags.js  markdownView.js  panelIndicator.js  scrollableAnswer.js  thinkingIndicator.js
gnome-extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.vox2ai.gschema.xml
packaging/pyinstaller/: vox2ai-server.spec
packaging/systemd-user/: vox2ai.service
scripts/: build_desktop.py  build_desktop_release.py  build_sidecar.py  check_versions.py  copy_sidecar.py  dev_gnome.sh  install_backend_service.sh  install_gnome_extension.sh  test_portal_screenshot.py
src/vox2ai/: __init__.py  __main__.py  audio.py  audio_input.py  audio_test.py  capabilities.py  cli.py  commands.py  config.py  conversation.py  credentials.py  desktop_protocol.py  desktop_server.py  doctor.py  errors.py  llm.py  partial_transcriber.py  prompts.py  providers.py  recorder.py  runner.py  screen_capture_portal.py  screen_context.py  secrets.py  settings.py  shortcuts.py  sidecar_main.py  stt.py  timing.py  transcript.py  tui.py  vocabulary.py
src/vox2ai/agent/: __init__.py  _legacy.py  executor.py  loop.py  planner.py  sanitizer.py  tool_registry.py  tools_base.py  working_memory.py
src/vox2ai/context/: __init__.py
src/vox2ai/prompts/: __init__.py  developer.py  planner.py  system.py  tool_result.py
src/vox2ai/tools/: __init__.py  clipboard.py  filesystem.py  git.py  run_command.py  system.py
src/vox2ai/wake/: __init__.py  detector.py  listener.py  manager.py
tests/: test_config.py  test_conversation_and_screen.py  test_desktop_cancellation.py  test_language_control.py  test_llm_config.py  test_partial_transcriber.py  test_permissions_or_parser.py  test_product_phase.py  test_release_scripts.py  test_sanitizer.py  test_shortcuts.py  test_text_prompt.py
