[package]
name = "vox2ai-desktop"
version = "0.1.0"
description = "vox2ai desktop frontend"
edition = "2021"

[lib]
name = "vox2ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
